# Movies.com

Backend/: main.py  pyproject.toml
Backend/Api/v1/: api.py
Backend/Api/v1/endpoints/: Movies.py  Users.py  movies.add.txt
Backend/Db/: config.py
Backend/Model/: base_uuid_model.py  movies_model.py  users_model.py
Backend/core/: settings.py
Backend/migration/: env.py
Backend/migration/versions/: 0ddd15fbfdca_removed_update_time_in_users.py  4aa63c316ed0_users_table_init.py  6889227af88a_movies_table_name_to_title.py  ca40f6182530_movies_table_created.py  d33ba88c6bb0_movies_table_added_index_and_unique.py
Frontend/: package-lock.json  vite.config.js
Frontend/src/: App.jsx
Frontend/src/components/: Navbar.jsx
Frontend/src/pages/: Login.jsx  Signup.jsx  main.jsx  movie.jsx
