[tool.poetry]
name = "netflix"
version = "0.1.0"
description = ""
authors = ["Amirdhesh <amirdhesh2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.2"
alembic = "^1.13.1"
sqlmodel = "^0.0.14"
pyjwt = "^2.8.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.0"
mysqlclient = "^2.2.3"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
